[package]
name = "magicblock-config"
version = "0.1.0"
edition = "2024"

[dependencies.derive_more]
version = "2.0"
features = ["display", "from_str"]

[dependencies]
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
humantime = { version = "1.1", package = "humantime-serde" }
isocountry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"
url = { version = "2.5", features = ["serde"] }

solana-pubkey = "2.2"
solana-keypair = "2.2"
